[project]
name = "image-to-text-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.8",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "ruff>=0.9.6",
    "uvicorn>=0.34.0",
]
